feat: Dados agora são puxados do Back-End com JSON Server.

--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -41,7 +41,7 @@
     <a href="index.html" class="btn btn-primary">Voltar para a Página Inicial</a>
   </div>
 
-  <main class="container my-5">
+  <main id="news-main" class="container my-5">
 
     <h1>Informações Gerais</h2>
     <hr>
